[[bin]]
name = "atm"
path = "src/main.rs"

[package]
name = "atm"
description = "ATM simulator"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }